Add search results to header

--- a/src/components/search-header/search-header.less
+++ b/src/components/search-header/search-header.less
@@ -1,47 +1,68 @@
 .search-header {
     width: 100%;
-    background: url("./header.jpg") no-repeat center;
-    background-size: cover;
     color: white;
     margin-bottom: 20px;
-    padding: 0 50px 20px;
 
-    .netflix {
-        color: red;
-        padding: 5px 0 30px;
-    }
+    .search {
+        background: url("./header.jpg") no-repeat center;
+        background-size: cover;
+        padding: 0 50px 20px;
 
-    .find-movie-label {
-        padding-bottom: 20px;
-    }
-
-    input[type=search] {
-        width: 100%;
-        background: black;
-        border: none;
-        border-bottom: 1px solid red;
-        height: 34px;
-        color: white;
-        margin-bottom: 20px;
-        outline: 0;
-    }
-
-    .search-block {
-        display: flex;
-        justify-content: space-between;
-
-        button {
-            background: rgb(59, 59, 59);
-            padding: 4px 12px;
-            border: 0;
-            color: white;
-            margin: 0 10px;
-            cursor: pointer;
-
-            &.active {
-                background: rgb(245, 82, 99);
-            }
+        .netflix {
+            color: red;
+            padding: 5px 0 30px;
         }
 
+        .find-movie-label {
+            padding-bottom: 20px;
+        }
+
+        input[type=search] {
+            width: 100%;
+            background: black;
+            border: none;
+            border-bottom: 1px solid red;
+            height: 34px;
+            color: white;
+            margin-bottom: 20px;
+            outline: 0;
+        }
+
+        .search-block {
+            display: flex;
+            justify-content: space-between;
+
+            button {
+                background: rgb(59, 59, 59);
+                padding: 4px 12px;
+                border: 0;
+                color: white;
+                margin: 0 10px;
+                cursor: pointer;
+
+                &.active {
+                    background: rgb(245, 82, 99);
+                }
+            }
+        }
+    }
+
+    .search-result {
+        color: black;
+        display: flex;
+        justify-content: space-between;
+        background-color: rgb(245, 245, 245);
+        padding: 6px 15%;
+        .sort-by {
+            display: flex;
+            justify-content: space-between;
+            width: 30%;
+            span {
+                cursor: pointer;
+                &.active {
+                    color: rgb(245, 82, 99);
+                }
+            }
+        }
     }
 }
