Add overview page

--- a/src/components/search-header/search-header.less
+++ b/src/components/search-header/search-header.less
@@ -4,7 +4,7 @@
     margin-bottom: 20px;
 
     .search {
-        background: url("./header.jpg") no-repeat center;
+        background: url("../../assets/header.jpg") no-repeat center;
         background-size: cover;
         padding: 0 50px 20px;
 
